[project]
name = "advance-aesthetic-score"
description = "Nodes:Advance Aesthetic Score"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/randjtw/advance-aesthetic-score"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "advance-aesthetic-score"
Icon = ""
